update camera structure

--- a/Week0.vcxproj
+++ b/Week0.vcxproj
@@ -139,9 +139,10 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="UCamera.cpp" />
+    <ClCompile Include="UEngineStatics.cpp" />
+    <ClCompile Include="UObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cube.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
     <ClInclude Include="ImGui\imgui_impl_dx11.h" />
