--- a/imgui.ini
+++ b/imgui.ini
@@ -7,6 +7,10 @@ Pos=36,40
 Size=457,389
 
 [Window][Example : Console]
-Pos=34,454
-Size=763,207
+Pos=34,385
+Size=763,246
+
+[Window][Jungle Control Panel]
+Pos=35,40
+Size=360,329
 
