--- a/Week0.vcxproj
+++ b/Week0.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AActor.cpp" />
     <ClCompile Include="FPhysScene.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
     <ClCompile Include="ImGui\imgui_demo.cpp" />
@@ -146,6 +147,7 @@
     <ClCompile Include="UObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AActor.h" />
     <ClInclude Include="FPhysScene.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
@@ -157,7 +159,8 @@
     <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Matrix.h" />
-    <ClInclude Include="MemoryManager.h" />
+    <ClInclude Include="UActorComponent.h" />
+    <ClInclude Include="UMemory.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="UArrowMeshData.h" />
     <ClInclude Include="UCamera.h" />
