--- a/Week0.vcxproj
+++ b/Week0.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="ImGui\imstb_textedit.h" />
     <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="ULevel.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="UActorComponent.h" />
     <ClInclude Include="UMemory.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="USphereComp.h" />
     <ClInclude Include="USphereMeshData.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="UWorld.h" />
     <ClInclude Include="UWorldAxis.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Vector4.h" />
