--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JsonCpp.Windows" version="1.9.2" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.220531.1" targetFramework="native" />
 </packages>
